get support requests
